2010-04-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Added TTO, TTR, MTBF and MTTR
	  reports.

	* include/functions_db.php: Fixed get_previous_data and wrote
	  get_next_data.

2010-04-29  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php
	  include/functions_db.php

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/setup/gis_step_2.php: Fixed the creation 
	of map connection without name and without type
	of connection. Bug:2993713

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/servers/manage_recontask.php: Fixed the creation
	of recon task without name and network. Also, the network 
	is checked by the following regular expression 
	"/[0-9]+.+[0-9]+.+[0-9]+.+[0-9]+\/+[0-9]/"

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: Fixed that
	was allowed to create a visual map without name and without
	background. Bug: 2993503

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed the critical render
	from an object that was not static graph when was heredated
	from another layout. Bug 2940950

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: 
	Limited the source modules availables for the prediction
	module at the modules with history_data = 1. bug:2922920

2010-04-29  Sergio Martin  <sergio.martin@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.0_to_v3.1.sql
	godmode/setup/gis_step_2.php
	godmode/gis_maps/configure_gis_map.php: Added at the combos the
	group All and asigned in creation layers -1 value to None value

2010-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed typo mistake in
	the field "id_agent_module".

2010-04-28 Miguel de Dios  <miguel.dedios@artica.es>
